# ehs-subject-backend

./: package-lock.json  package.json  pyproject.toml
companies/: models.py  serializers.py  urls.py  views.py
companies/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
config/: settings.py  urls.py
factors/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
factors/migrations/: 0001_initial.py
opinions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
opinions/migrations/: 0001_initial.py
segs/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
segs/migrations/: 0001_initial.py
staffs/: admin.py  models.py  serializers.py  urls.py  views.py
staffs/migrations/: 0001_initial.py  0002_alter_staff_g_examination_alter_staff_s_examination.py
users/migrations/: 0001_initial.py
